Added a couple more unit tests

--- a/AngularSeedAspNet5/src/AngularSeedAspNet5/Views/Home/TestRunner.cshtml
+++ b/AngularSeedAspNet5/src/AngularSeedAspNet5/Views/Home/TestRunner.cshtml
@@ -12,10 +12,10 @@
     <script type="text/javascript" src="~/lib/angular-mocks/angular-mocks.js"></script>
 
     @*include source files here*@
-    <script src="~/app/omdb/omdb.js"></script>
+    <script src="~/app/omdb/omdbApi.factory.js"></script>
 
     @*include spec files here*@
-    <script src="~/app/omdb/omdb.spec.js"></script>
+    <script src="~/app/omdb/omdbApi.factory.spec.js"></script>
 
 </head>
 <body>
