added some more simple testing cases for examples.

--- a/AngularSeedAspNetCore/src/AngularSeedAspNetCore/Views/Home/TestRunner.cshtml
+++ b/AngularSeedAspNetCore/src/AngularSeedAspNetCore/Views/Home/TestRunner.cshtml
@@ -13,9 +13,11 @@
 
     @*include source files here*@
     <script src="~/app/omdb/omdbApi.factory.js"></script>
+    <script src="~/app/movie-core/popularmovies.factory.js"></script>
 
     @*include spec files here*@
     <script src="~/app/omdb/omdbApi.factory.spec.js"></script>
+    <script src="~/app/movie-core/popularmovies.factory.spec.js"></script>
 
 </head>
 <body>
