--- a/AngularSeedAspNetCore/src/AngularSeedAspNetCore/Views/Shared/_Layout.cshtml
+++ b/AngularSeedAspNetCore/src/AngularSeedAspNetCore/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AngularSeedAspNet5</title>
+    <title>@ViewData["Title"] - AngularSeedAspNetCore</title>
 
     <environment names="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-controller="Home" asp-action="Index" class="navbar-brand">AngularSeedAspNet5</a>
+                <a asp-controller="Home" asp-action="Index" class="navbar-brand">AngularSeedAspNetCore</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -41,7 +41,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; 2016 - AngularSeedAspNet5</p>
+            <p>&copy; 2016 - AngularSeedAspNetCore</p>
         </footer>
     </div>
 
